--- a/views/BuyerProfile.html
+++ b/views/BuyerProfile.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="stylebuyer.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/styles/stylebuyer.css" />
     <title>Buyer Page</title>
   </head>
   <body>
@@ -13,7 +16,7 @@
         <nav class="navigation">
           <!-- <strong>This is the navigation</strong> -->
           <img
-          src="img/Homeview-logo.png"
+          src="/img/Homeview-logo.png"
           alt="homeview logo"
           height="62"
           width="62"
@@ -27,32 +30,34 @@
           <a href="#" class="profile-box-img">Login</a>
           <a href="#">Sign Up</a>
           <img
-          src="img/silo.png"
+          src="/img/silo.png"
           alt="silohette profile image"
           height="48"
           width="48"
           class="profile-box-img1"
           />
         </nav>
-        
+      </header>
+        <header class="post-header">
         <h1>Buyer Profile</h1>
         <div class="profile-box">
           <img
-          src="img/silo.png"
+          src="/img/silo.png"
           alt="silohette profile image"
           height="48"
           width="48"
           class="profile-box-img"
           />
-          <p>Full Name</p>
-          <p>@username</p>
-          <button class="profile-box-button">Edit Profile</button>
+          <p>Full Name 
+          <br>@username</p>
+          <button class="profile-box-button">EDIT PROFILE</button>
         </div>
-        <button>
+      </header>
+        <button class="search">
           Start Searching
           <svg
           xmlns="http://www.w3.org/2000/svg"
-          class="icon"
+          class="webicon"
           fill="none"
           viewBox="0 0 24 24"
           stroke="currentColor"
@@ -65,33 +70,36 @@
           />
         </svg>
       </button>
-    </header>
       
       <div class="recent-prop">
         <p>Recently Viewed Properties</p>
         <div class="property">
           <img
-            src="img/property1.png"
+            src="/img/property1.jpg"
             alt="property one"
-            height="250"
-            width="250"
+            height="125"
+            width="150"
             class="property-img"
           />
-          <h2>Property Location</h2>
-          <p>List time</p>
-          <p>List active tive</p>
+          <div>
+            <h2>Property Location</h2>
+            <p>List time</p>
+            <p>List active tive</p>
+          </div>
         </div>
         <div class="property">
           <img
-            src="img/property2.png"
+            src="/img/property2.jpg"
             alt="property two"
-            height="250"
-            width="250"
+            height="125"
+            width="150"
             class="property-img"
           />
-          <h2>Property Location</h2>
-          <p>List time</p>
-          <p>List active tive</p>
+          <div>
+            <h2>Property Location</h2>
+            <p>List time</p>
+            <p>List active tive</p>
+          </div>
         </div>
       </div>
 
@@ -109,27 +117,27 @@
         <ul>
         <tr>
         <td><img
-          src="img/silo.png"
+          src="/img/silo.png"
           alt="silohette profile image"
           height="48"
           width="48"
           class="profile-box-img"
         /></td>
         <td><img
-          src="img/property1.png"
+          src="/img/property1.png"
           alt="property one"
           height="250"
           width="250"
           class="property-img"
         /></td>
-        <td><p>Viewing Request</p> <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+        <td><p>Viewing Request</p> <svg xmlns="http://www.w3.org/2000/svg" class="webicon" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
           <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
           <path stroke-linecap="round" stroke-linejoin="round" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
         </svg></td>
         <td>Hello, bla bla bla</td>
-        <td><button class="message-options">Reply<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+        <td><button class="message-options">Reply<svg xmlns="http://www.w3.org/2000/svg" class="webicon" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
           <path stroke-linecap="round" stroke-linejoin="round" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z" />
-        </svg></button> <button class="message-options">Delete<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+        </svg></button> <button class="message-options">Delete<svg xmlns="http://www.w3.org/2000/svg" class="webicon" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
           <path stroke-linecap="round" stroke-linejoin="round" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
         </svg></button></td>
         </tr>
@@ -137,7 +145,7 @@
         </table>
       </div>
     </div>
-    <footer><div class="homeview-footer"> <p>Copyright 2022 HomeView</p></div> 
+    <footer> <p>Copyright 2022 HomeView</p> 
       <nav>
         <a href="#">FAQ</a>
         <a href="#">About Us</a>
