--- a/views/BuyerProfile.html
+++ b/views/BuyerProfile.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/styles/stylebuyer.css" />
     <title>Buyer Page</title>
   </head>
@@ -16,71 +19,67 @@
         <nav class="navigation">
           <!-- <strong>This is the navigation</strong> -->
           <img
-          src="/img/Homeview-logo.png"
-          alt="homeview logo"
-          height="62"
-          width="62"
-          class="homeview"
+            src="/img/Homeview-logo.png"
+            alt="homeview logo"
+            height="62"
+            width="62"
+            class="homeview"
           />
           <a href="index.html">Home</a>
           <a href="#">Buy</a>
           <a href="#">Sell</a>
           <a href="#">Help</a>
           <a href="#">About Us</a>
-          <a href="#" class="profile-box-img">Login</a>
+          <a href="#" class="header-img">Login</a>
           <a href="#">Sign Up</a>
           <img
-          src="/img/silo.png"
-          alt="silohette profile image"
-          height="48"
-          width="48"
-          class="profile-box-img1"
+            src="/img/silo.png"
+            alt="silohette profile image"
+            height="48"
+            width="48"
+            class="header-img"
           />
         </nav>
       </header>
-        <header class="post-header">
+      <header class="post-header">
         <h1>Buyer Profile</h1>
         <div class="profile-box">
           <img
-          src="/img/silo.png"
-          alt="silohette profile image"
-          height="48"
-          width="48"
-          class="profile-box-img"
+            src="/img/silo.png"
+            alt="silohette profile image"
+            height="48"
+            width="48"
+            class="header-img"
           />
-          <p>Full Name 
-          <br>@username</p>
+          <p>Full Name <br />@username</p>
           <button class="profile-box-button">EDIT PROFILE</button>
         </div>
       </header>
-        <button class="search">
-          Start Searching
-          <svg
+      <button class="search">
+        Start Searching
+        <svg
           xmlns="http://www.w3.org/2000/svg"
           class="webicon"
           fill="none"
           viewBox="0 0 24 24"
           stroke="currentColor"
           stroke-width="2"
-          >
+        >
           <path
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
           />
         </svg>
       </button>
       <section class="data">
-
         <div class="recent-prop">
           <p>Recently Viewed Properties</p>
           <div class="property">
             <img
-            src="/img/property1.jpg"
-            alt="property one"
-            height="125"
-            width="150"
-            class="property-img"
+              src="/img/property1.jpg"
+              alt="property one"
+              class="property-img"
             />
             <div>
               <h2>Property Location</h2>
@@ -90,11 +89,9 @@
           </div>
           <div class="property">
             <img
-            src="/img/property2.jpg"
-            alt="property two"
-            height="125"
-            width="150"
-            class="property-img"
+              src="/img/property2.jpg"
+              alt="property two"
+              class="property-img"
             />
             <div>
               <h2>Property Location</h2>
@@ -103,13 +100,19 @@
             </div>
           </div>
         </div>
-        
+
         <div class="messages">
-          <p>Messages</p>
-          <table style="width: 100%;">
-            <table border="1">
+          <table class="messages-table">
+            <thead>
               <tr>
-                <th>From</th> 
+                <th colspan="5" scope="colgroup">
+                  <p class="messages-header">Messages</p>
+                </th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th>From</th>
                 <th>Property</th>
                 <th>Message Type</th>
                 <th>Message</th>
@@ -117,38 +120,90 @@
               </tr>
               <ul>
                 <tr>
-                  <td><img
-                    src="/img/silo.png"
-                    alt="silohette profile image"
-                    height="48"
-                    width="48"
-                    class="profile-box-img"
-                    /></td>
-                    <td><img
-                      src="/img/property1.png"
+                  <td>
+                    <img
+                      src="/img/silo.png"
+                      alt="silohette profile image"
+                      height="48"
+                      width="48"
+                      class="profile-box-img"
+                    />
+                  </td>
+                  <td>
+                    <img
+                      src="/img/property1.jpg"
                       alt="property one"
                       height="250"
                       width="250"
                       class="property-img"
-                      /></td>
-                      <td><p>Viewing Request</p> <svg xmlns="http://www.w3.org/2000/svg" class="webicon" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
-                      </svg></td>
-                      <td>Hello, bla bla blagcmkmnghklmnklfgf</td>
-                      <td><button class="message-options">Reply<svg xmlns="http://www.w3.org/2000/svg" class="webicon" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z" />
-                      </svg></button> <button class="message-options">Delete<svg xmlns="http://www.w3.org/2000/svg" class="webicon" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
-                      </svg></button></td>
-                    </tr>
-                  </ul>
-                </table>
-              </div>
-            </section>
-            </div>
-            <footer> 
-      <p>Copyright 2022 HomeView</p> 
+                    />
+                  </td>
+                  <td>
+                    <p>Viewing Request</p>
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      class="webicon"
+                      fill="none"
+                      viewBox="0 0 24 24"
+                      stroke="currentColor"
+                      stroke-width="2"
+                    >
+                      <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
+                      />
+                      <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"
+                      />
+                    </svg>
+                  </td>
+                  <td>Hello, bla bla blagcmkmnghklmnklfgf</td>
+                  <td>
+                    <button class="message-options">
+                      Reply<svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        class="webicon"
+                        fill="none"
+                        viewBox="0 0 24 24"
+                        stroke="currentColor"
+                        stroke-width="2"
+                      >
+                        <path
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                          d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"
+                        />
+                      </svg>
+                    </button>
+                    <button class="message-options">
+                      Delete<svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        class="webicon"
+                        fill="none"
+                        viewBox="0 0 24 24"
+                        stroke="currentColor"
+                        stroke-width="2"
+                      >
+                        <path
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                          d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
+                        />
+                      </svg>
+                    </button>
+                  </td>
+                </tr>
+              </ul>
+            </tbody>
+          </table>
+        </div>
+      </section>
+    </div>
+    <footer>
+      <p>Copyright 2022 HomeView</p>
       <nav>
         <a href="#">FAQ</a>
         <a href="#">About Us</a>
@@ -156,5 +211,4 @@
       </nav>
     </footer>
   </body>
-  </html>
-  
+</html>
