Create a listing page
Create a listing page added

--- a/css/general.css
+++ b/css/general.css
@@ -87,6 +87,10 @@ p {
   margin: 0 auto;
 }
 
+.section-container {
+  margin: 0 2.4rem 0 2.4rem;
+}
+
 .head-foot-container {
   max-width: 100rem;
   padding: 0;
@@ -623,4 +627,22 @@ p {
 .message-new-text {
   font-size: 1.2rem;
   font-weight: 500;
+}
+
+/* forms */
+
+.form-field {
+  border-radius: 5px;
+  border: none;
+  height: 3rem;
+  font-size: 1.4rem;
+  padding: 0 0.4rem 0 0.4rem;
+}
+
+.form-field-description {
+  border-radius: 5px;
+  border: none;
+  height: 3rem;
+  font-size: 1.4rem;
+  padding: 0.4rem 0.4rem 0 0.4rem;
 }
