--- a/css/styles.css
+++ b/css/styles.css
@@ -740,10 +740,7 @@
 }
 
 /* Full-width input fields */
-input[type="text"],
-input[type="password"],
-input[type="tel"],
-input[type="date"] {
+.form_input {
   /* width: 100%;
   padding: 15px;
   margin: 5px 0 22px 0;
@@ -766,10 +763,7 @@ input[type="date"] {
   text-align: center;
 }
 
-input[type="text"]:focus,
-input[type="password"]:focus,
-input[type="tel"]:focus,
-input[type="date"]:focus {
+.form_input:focus {
   background-color: white;
   outline: none;
 }
@@ -845,4 +839,298 @@ a {
 .agree-to-tos {
   color: white;
   padding-bottom: 1rem;
+}
+
+/* CREATE LISTING PAGE */
+
+/* Create Listing header */
+
+.create-listing-header {
+  padding: 2.4rem 0;
+}
+
+/* Buyer page main content */
+
+.section-create-listing-main {
+  padding-bottom: 2.4rem;
+}
+
+.create-listing-main {
+  padding: 1.2rem 0;
+}
+
+.form-label {
+  color: #ebf4f7;
+  font-size: 1.4rem;
+}
+
+.orng-astrx,
+.form-help-icon {
+  color: #fc7753;
+}
+
+.form-help-icon {
+  width: 2rem;
+  height: 2rem;
+}
+
+.create-listing-form-container {
+  padding: 2.4rem;
+  border: solid 2px #fc7753;
+  background-color: #033860;
+  border-radius: 14px;
+}
+
+.create-listing-form-outer {
+  background-color: #033860;
+  padding: 1.2rem;
+  border-radius: 14px;
+  margin: 0 2.4rem 0 2.4rem;
+}
+
+.create-listing-section-1 {
+  display: grid;
+  grid-template-columns: 0.4fr 0.6fr;
+  grid-template-rows: 0.5fr 0.5fr;
+  column-gap: 3.2rem;
+  row-gap: 1.2rem;
+}
+
+.property-name-field {
+  grid-row: 1;
+  grid-column: 1/-1;
+  display: flex;
+  align-items: center;
+  gap: 1.2rem;
+}
+
+.property-name-field input {
+  flex-grow: 1;
+}
+
+.guide-price-field {
+  grid-row: 2;
+  grid-column: 1;
+  display: flex;
+  align-items: center;
+  gap: 1.2rem;
+}
+
+.guide-price-field input {
+  flex-grow: 1;
+}
+
+.property-type-field {
+  grid-row: 2;
+  grid-column: 2;
+  display: flex;
+  align-items: center;
+  gap: 1.2rem;
+}
+
+.property-type-field select {
+  flex-grow: 1;
+}
+
+.description-field {
+  display: grid;
+  grid-template-rows: auto auto;
+  margin-top: 1.6rem;
+  row-gap: 1.2rem;
+}
+
+.description-field-label {
+  justify-self: left;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.2rem;
+}
+
+.description-field-input {
+  display: flex;
+}
+
+.description-field-input textarea {
+  resize: none;
+  font-family: "Inter", sans-serif;
+  flex-grow: 1;
+  height: 10rem;
+}
+
+.location-section-label {
+  display: inline-block;
+  margin-top: 1.6rem;
+}
+
+.create-listing-location-section {
+  display: grid;
+  grid-template-columns: 0.2fr 0.77fr 0.1fr 0.2fr;
+  align-items: center;
+  margin-top: 1.2rem;
+  gap: 1.2rem;
+}
+
+.create-listing-images-section label {
+  display: inline-block;
+  margin-top: 1.6rem;
+  display: flex;
+  align-items: center;
+  gap: 1.2rem;
+}
+
+.create-listing-images-upload-box {
+  display: flex;
+  flex-grow: 1;
+  justify-content: center;
+  background-color: #fff;
+  height: 10rem;
+  margin-top: 1.2rem;
+}
+
+.create-listing-icon-selector {
+  margin-top: 2.4rem;
+}
+
+.icon-selector-main-label {
+  display: flex;
+  align-items: center;
+  gap: 1.2rem;
+  font-size: 1.4rem;
+  color: #ebf4f7;
+  background-color: #033860;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translate(30%, -50%);
+  padding: 0 0.6rem 0 0.6rem;
+}
+
+.icon-selector-outer {
+  border: solid 2px #087ca7;
+  border-radius: 5px;
+  position: relative;
+}
+
+.icon-selector-inner {
+  margin: 1.6rem;
+  border: solid 2px #ebf4f7;
+  border-radius: 5px;
+  display: grid;
+  grid-template-columns: 0.18fr 0.82fr;
+}
+
+.icon-selector-must-use-icons {
+  display: grid;
+  grid-template-rows: repeat(5, 1fr);
+  justify-items: center;
+  background-color: #fff;
+  padding: 1.2rem;
+}
+
+.grey-form-label {
+  color: #495057;
+}
+
+.icon-selector-label {
+  padding-bottom: 1.2rem;
+}
+
+.icon-selector-icon-must-use {
+  stroke: #495057;
+  height: 2rem;
+  width: 2rem;
+}
+
+.icon-selector-icon {
+  color: #ebf4f7;
+  fill: #ebf4f7;
+  width: 2rem;
+  height: 2rem;
+}
+
+.icon-selector-optional-icons {
+  padding: 1.2rem;
+  background-color: #087ca7;
+}
+
+.italic-label {
+  font-style: italic;
+}
+
+.label-align {
+  display: flex;
+  align-items: center;
+  gap: 0.4rem;
+}
+
+.input-align {
+  text-align: center;
+}
+
+.must-use-input {
+  width: 25%;
+}
+
+.optional-icon-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  row-gap: 1.2rem;
+  column-gap: 2.2rem;
+  margin-top: 1.6rem;
+}
+
+.optional-icon {
+  color: #ebf4f7;
+  width: 2rem;
+  height: 2rem;
+}
+
+.optional-icon-label {
+  color: #ebf4f7;
+  font-size: 1.2rem;
+  display: flex;
+  gap: 0.8rem;
+}
+
+.optional-icon-label span {
+  align-self: center;
+}
+
+.optional-icons-set {
+  display: flex;
+  align-content: center;
+  justify-content: space-between;
+}
+
+.optional-icons-checkbox {
+  align-self: center;
+}
+
+.tandclink:link,
+.tandclink:visited {
+  text-decoration: none;
+  font-weight: 500;
+  color: #ebf4f7;
+}
+
+.tandclink:hover,
+.tandclink:active {
+  text-decoration: underline;
+  font-weight: 500;
+  color: #ebf4f7;
+}
+
+.submit-section {
+  justify-content: right;
+  display: flex;
+  align-items: center;
+  gap: 2.4rem;
+  margin-top: 1.6rem;
+}
+
+.submit-descriptor {
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
 }
