--- a/css/styles.css
+++ b/css/styles.css
@@ -1156,6 +1156,71 @@ a {
 }
 
 .about-us-house {
-  width: 19rem;
-  height: 13rem;
+  width: 24.32rem;
+  height: 16.64rem;
+  border-radius: 14px;
+  box-shadow: 0 0 4.8rem rgba(0, 0, 0, 0.1);
+}
+
+.about-us-images {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  align-items: center;
+  row-gap: 2.4rem;
+  column-gap: 4.8rem;
+  margin-bottom: 2.4rem;
+}
+
+.about-us-house-1,
+.about-us-house-3 {
+  grid-column: 2;
+  justify-self: left;
+}
+
+.about-us-house-2 {
+  grid-column: 1;
+  grid-row: 1/-1;
+  justify-self: right;
+}
+
+.about-us-socials-bar {
+  background-color: #033860;
+  display: grid;
+  grid-template-columns: 0.3fr 0.05fr 0.3fr 0.05fr 0.3fr;
+  justify-items: center;
+  align-items: center;
+  box-shadow: 0 0 4.8rem rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  padding: 1.2rem 2.4rem;
+}
+
+.about-us-socials-divider-display {
+  width: 0.05rem;
+  height: 7rem;
+  background-color: #ebf4f7;
+}
+
+.about-us-socials-socials-logo {
+  width: 4rem;
+  height: 4rem;
+}
+
+.about-us-socials-socials {
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+}
+
+.about-us-socials-socials-link {
+  color: rgba(3, 56, 96, 0);
+}
+
+.about-us-socials-awards {
+  display: flex;
+  gap: 1.2rem;
+}
+
+.about-us-socials-awards-img {
+  height: 9rem;
 }
