--- a/css/viewerpage.css
+++ b/css/viewerpage.css
@@ -151,9 +151,23 @@ h4 {
   color: #444;
 }
 
+/* NEW */
+.description {
+  font-size: 20px;
+  font-weight: 700;
+  margin-left: 200px;
+  margin-bottom: 20px;
+}
+
+/* NEW */
+p {
+  margin-top: 10px;
+}
+
 article {
   margin-left: 200px;
   background-color: rgba(255, 255, 255, 0.596);
+  font-size: 12px;
   line-height: 1.2;
   color: rgba(0, 0, 0, 0.582);
   width: 25%;
@@ -164,6 +178,13 @@ article {
   position: relative;
 
   /* box-shadow: 1px 1px 10px; */
+}
+
+/* NEW */
+.details-title {
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 20px;
 }
 
 .house {
@@ -183,20 +204,30 @@ article {
   font-style: italic;
   color: rgba(0, 0, 0, 0.582);
 
-  margin-left: 200px;
   margin-bottom: 20px;
   padding: 2px 10px;
   border-radius: 10px;
+}
+
+.seller-title {
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 15px;
+}
+
+.name {
+  font-size: 12px;
+  color: #fff;
 }
 
 .seller-info {
   background-color: rgba(0, 38, 255, 0.863);
   color: #fff;
   border-radius: 10px;
-  margin-left: 200px;
+  /* margin-left: 200px; */
   margin-bottom: 15px;
   padding: 10px 20px;
-  width: 25%;
+  width: 30%;
   height: 60px;
 
   display: flex;
@@ -214,8 +245,8 @@ article {
 .contact-button {
   background-color: #012c4d;
   color: #c8630f;
-  font-size: 12px;
-  width: 350px;
+  font-size: 9px;
+  width: 400px;
   text-transform: uppercase;
   text-decoration: none;
   border-radius: 5px;
@@ -291,7 +322,7 @@ article {
   display: flex-end;
   align-items: center;
   justify-content: center;
-  gap: 30px;
+  gap: 15px;
 }
 
 .footer-nav-bar li a:link,
