--- a/css/propertysearch.css
+++ b/css/propertysearch.css
@@ -60,11 +60,21 @@ body {
 }
 
 h1 {
-  margin-top: 2rem;
+  padding: 2rem 0;
   font-size: 4.2rem;
+  text-align: center;
+}
+.results-text {
+  margin-bottom: 2rem;
+}
+
+.results-text span {
+  color: #087ca7;
+  font-weight: bolder;
 }
 .design-box {
   margin: 0 auto;
+  margin-bottom: 4rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -96,7 +106,6 @@ h1 {
 .btn {
   padding: 0px 10px 0px 10px;
   box-shadow: 1px 5px 8px rgba(0, 0, 0, 0.05);
-
   color: white;
   border: 1px solid #29323d;
   border-radius: 3px 3px 3px 3px;
@@ -107,10 +116,23 @@ h1 {
   cursor: pointer;
   width: 10.7rem;
   transition: all 0.3sec;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2px;
 }
 .search-btn {
   margin-left: auto;
   background: #087ca7;
+}
+.search-btn:hover,
+.search-btn:active {
+  background: #077096;
+}
+
+.clear-btn:hover,
+.clear-btn:active {
+  background: #077096;
 }
 .clear-btn {
   background: none;
@@ -168,11 +190,14 @@ label {
   font-size: 2rem;
   font-weight: 700;
 }
+.btn-icon-search {
+  font-size: 2rem;
+}
 /*************************/
 /*CAROUSEL RESULTS(NEEDS WORK
 /**************************/
 .carousel {
-  margin: auto;
+  margin: 0 auto;
   width: 50%;
   display: grid;
   grid-template-columns: 0.05fr 0.3fr 0.3fr 0.3fr 0.05fr;
@@ -342,14 +367,6 @@ label {
 /************************************/
 /*FOOTER SECTION*/
 /************************************/
-.footer {
-  background-color: #033860;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 2.4rem;
-  height: 4.4rem;
-}
 .logo-footer {
   height: 5.2rem;
 }
