--- a/css/styles.css
+++ b/css/styles.css
@@ -559,14 +559,14 @@
   padding: 1.2rem 0;
 }
 
-.outer-login-flexbox {
+/* .outer-login-flexbox {
   display: flex;
   align-items: center;
   background-color: #ebf4f7;
   justify-content: center;
-}
+} */
 
-.design-box {
+/* .design-box {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -574,42 +574,87 @@
   height: 45rem;
   width: 85rem;
   border-radius: 10px;
-}
+} */
 
-.inner-login-flexbox {
-  /*display: grid;
-  grid-template-columns: repeat(2, 1fr);*/
+/* .inner-login-flexbox {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  /* background-color: #033860; */
+  background-color: #033860;
   height: 40rem;
   width: 80rem;
   border-radius: 10px;
   border-style: solid;
   border-color: #fc7753;
+} */
+
+/* .login-test {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #033860;
+  background-color: #033860;
+  height: 38rem;
+  width: 38rem;
+} */
+/* .signup-test {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #033860;
+  height: 38rem;
+  width: 38rem;
+} */
+
+.login-split-form {
+  display: grid;
+  grid-template-columns: 0.5fr 0.5fr;
+  align-items: center;
 }
 
-.login-test {
+.login-login-section {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  justify-content: space-between;
-  align-items: center;
-  /* background-color: #033860; */
-  background-color: #033860;
-  height: 38rem;
-  width: 38rem;
+  gap: 1.2rem;
 }
-.signup-test {
+
+.login-login-section-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 0.25fr 0.25fr 0.25fr;
+  justify-items: center;
+  gap: 3.2rem;
+}
+
+.login-fields-section {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #033860;
-  height: 38rem;
-  width: 38rem;
+  gap: 1.2rem;
+}
+
+.login-logo {
+  height: 6.4rem;
+  object-fit: contain;
+}
+
+.login-signup-section {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 0.5fr 0.5fr;
+  justify-items: center;
+  row-gap: 4.8rem;
+}
+
+.login-signup-text-section {
+  display: flex;
+  flex-direction: column;
+  gap: 0.8rem;
 }
 
 /********************************************************/
@@ -801,11 +846,6 @@ hr {
 .registerbtn:hover,
 .registerbtn:active {
   background-color: #2189b0;
-}
-
-/* Add a blue text color to links */
-a {
-  color: dodgerblue;
 }
 
 /* Set a grey background color and center the text of the "sign in" section */
