create account tidy up

--- a/css/general.css
+++ b/css/general.css
@@ -4,6 +4,9 @@
 - SPACING SYSTEM (px)
 2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128 */
 
+/* Label to field gap: 1.2rem
+ */
+
 /* Font weights: 400, 500, 600, 700, 800 */
 
 /* Colors
