--- a/css/styles.css
+++ b/css/styles.css
@@ -558,60 +558,6 @@
 .section-main-login {
   padding: 1.2rem 0;
 }
-
-/* .outer-login-flexbox {
-  display: flex;
-  align-items: center;
-  background-color: #ebf4f7;
-  justify-content: center;
-} */
-
-/* .design-box {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #033860;
-  height: 45rem;
-  width: 85rem;
-  border-radius: 10px;
-} */
-
-/* .inner-login-flexbox {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  background-color: #033860;
-  height: 40rem;
-  width: 80rem;
-  border-radius: 10px;
-  border-style: solid;
-  border-color: #fc7753;
-} */
-
-/* .login-test {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #033860;
-  background-color: #033860;
-  height: 38rem;
-  width: 38rem;
-} */
-/* .signup-test {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #033860;
-  height: 38rem;
-  width: 38rem;
-} */
-
 .login-split-form {
   display: grid;
   grid-template-columns: 0.5fr 0.5fr;
@@ -734,159 +680,116 @@
 
 /* SignUp Page */
 
+.signup-header {
+  padding: 2.4rem 0;
+}
+
 .section-signup {
   padding: 1.2rem 0;
 }
 
-.signup-design-box {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #033860;
-  height: 76rem;
-  width: 91rem;
-  border-radius: 5px;
-}
-
-.inner-signup-flexbox {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  background-color: #033860;
-  height: 75rem;
-  width: 90rem;
-  border-radius: 5px;
-  border-style: solid;
-  border-color: #fc7753;
-}
-
-.register-gridbox {
-  height: 55rem;
-  width: 75rem;
-  display: grid;
-  background-color: white;
-  grid-template-columns: repeat(3, 1fr);
-}
-
-.register-section {
-  background-color: red;
-  grid-column: 1/3;
-}
-
-.avatar-section {
-  background-color: blueviolet;
-}
-
-/* TST */
-.register-container {
-  padding: 16px;
-  background-color: #033860;
-}
-
-/* Full-width input fields */
-.form_input {
-  /* width: 100%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
-  display: inline-block;
-  border: none;
-  background: whitesmoke; */
-  display: inline-block;
-  width: 100%;
-  height: 3.6rem;
-  padding: 4px 8px 4px 8px;
-  margin: 5px 0 22px 0;
-  color: black;
-  border-color: #232323;
-  border-width: 1px;
-  border-style: solid;
-  border-radius: 3px 3px 3px 3px;
+.dob-field-input {
   font-family: inherit;
-  font-weight: 400;
-  font-size: 1.4rem;
-  text-align: center;
 }
 
-.form_input:focus {
-  background-color: white;
-  outline: none;
-}
-
-/* Overwrite default styles of hr */
-hr {
-  border: 1px solid #fc7753;
-  margin-bottom: 25px;
-}
-
-/* Set a style for the submit button */
-.registerbtn {
-  width: 16rem;
-  height: 4rem;
-  background: #087ca7;
-  color: #ebf4f7;
-  border-color: #29323d;
-  border-width: 1px;
-  border-style: solid;
-  border-radius: 10px 10px 10px 10px;
-  font-weight: 400;
-  font-size: 1.6rem;
-  line-height: 1;
-  text-align: center;
-  cursor: pointer;
-  text-transform: uppercase;
-}
-
-.registerbtn,
-.registerbtn:link,
-.registerbtn:visited {
-  background-color: #087ca7;
-  color: #ebf4f7;
-}
-
-.registerbtn:hover,
-.registerbtn:active {
-  background-color: #2189b0;
-}
-
-/* Set a grey background color and center the text of the "sign in" section */
-.signin {
-  background-color: #f1f1f1;
-  text-align: center;
-}
-
-.avatar-section {
+.signup-form-section-1,
+.signup-password-section {
   display: flex;
+  flex-direction: row;
+  gap: 1.2rem;
+  margin-bottom: 1.2rem;
+}
+
+.signup-password-section,
+.signup-address-section,
+.signup-account-info,
+.marketing-section {
+  margin-bottom: 2.4rem;
+}
+
+.signup-address-section {
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-columns: 0.15fr 0.4fr 0.15fr 0.3fr;
   align-items: center;
-  justify-content: center;
-  justify-content: space-evenly;
+  gap: 1.2rem;
+}
+
+.signup-address-section .left-label {
+  grid-column: 1;
+}
+.signup-address-section .left-field {
+  grid-column: 2;
+}
+.signup-address-section .right-field {
+  grid-column: 4;
+}
+.signup-address-section .right-label {
+  grid-column: 3;
+}
+
+.signup-town-label,
+.signup-town-field {
+  grid-row: 1;
+}
+.signup-city-label,
+.signup-city-field {
+  grid-row: 2;
+}
+.signup-postcode-label,
+.signup-postcode-field {
+  grid-row: 3;
+}
+
+.signup-account-info {
+  display: grid;
+  grid-template-columns: 0.4fr 0.25fr 0.35fr;
+}
+
+.username-field,
+.account-type-field {
+  justify-content: space-between;
+}
+
+.username-field .form-field,
+.account-type-field .form-field,
+.email-field .form-field,
+.phone-field .form-field {
+  flex-grow: 1;
+}
+
+.signup-contact-info {
+  display: grid;
+  grid-template-columns: 0.6fr 0.4fr;
+  gap: 1.2rem;
+}
+
+.marketing-section {
+  display: grid;
+  grid-template-columns: 0.75fr 0.1fr 0.15fr;
+}
+
+.signup-contact-info {
+  margin-bottom: 1.2rem;
+}
+
+.signup-form-bottom {
+  display: grid;
+  grid-template-columns: 0.2fr 0.2fr 0.6fr;
+  align-items: center;
+  justify-items: center;
+}
+
+.signup-submit-section {
+  display: flex;
   flex-direction: column;
-  background-color: #033860;
-}
-
-.placeholderimg {
-  height: 20rem;
-  width: 20rem;
-}
-
-.formimg {
-  background-color: #033860;
-  display: flex;
   align-items: center;
-  color: white;
+  justify-items: center;
+  gap: 2.4rem;
 }
 
-.labels {
-  color: white;
-}
-
-.register-text {
-  color: white;
-  padding-bottom: 1rem;
-}
-
-.agree-to-tos {
-  color: white;
-  padding-bottom: 1rem;
+.signup-image-info {
+  color: #ebf4f7;
 }
 
 /* CREATE LISTING PAGE */
